--- a/app/src/main/res/layout/game_display.xml
+++ b/app/src/main/res/layout/game_display.xml
@@ -48,7 +48,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.976" />
 
-    <com.example.myapplication.TicTacToeBoard
+    <com.dion.tictactoe.TicTacToeBoard
         android:id="@+id/ticTacToeBoard"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
